k3s/cluster/apps/nas-attached/music-stack/picard/workload/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picard-admin
  namespace: picard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-admin-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: picard.admin.dege.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: picard
                port:
                  number: 80
